--- a/templates/litigation/new.html.twig
+++ b/templates/litigation/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('litigation/_form.html.twig') }}
 
-    <a href="{{ path('litigation_index') }}">back to list</a>
+    <a href="{{ path('litigation_index') }}" class="btn btn-primary">back to list</a>
 {% endblock %}
