--- a/templates/demand/new.html.twig
+++ b/templates/demand/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('demand/_form.html.twig') }}
 
-    <a href="{{ path('demand_index') }}">back to list</a>
+    <a href="{{ path('demand_index') }}" class="btn btn-primary">back to list</a>
 {% endblock %}
