--- a/templates/litigation/edit.html.twig
+++ b/templates/litigation/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('litigation/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('litigation_index') }}">back to list</a>
+    <a href="{{ path('litigation_index') }}" class="btn btn-primary">back to list</a>
 
     {{ include('litigation/_delete_form.html.twig') }}
 {% endblock %}
