--- a/templates/litigation/show.html.twig
+++ b/templates/litigation/show.html.twig
@@ -42,9 +42,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('litigation_index') }}">back to list</a>
+    <a href="{{ path('litigation_index') }}" class="btn btn-primary">back to list</a>
 
-    <a href="{{ path('litigation_edit', {'id': litigation.id}) }}">edit</a>
+    <a href="{{ path('litigation_edit', {'id': litigation.id}) }}" class="btn btn-warning">edit</a>
 
     {{ include('litigation/_delete_form.html.twig') }}
 {% endblock %}
